01-container-platform/k8s/annotations-constraint/constraint-template.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredannotations
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredAnnotations
      validation:
        openAPIV3Schema:
          properties:
            annotations:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredannotations

        violation[{"msg": msg, "details": {"missing_annotations": missing}}] {
          # For Pod
          input.review.kind.kind == "Pod"
          provided := {annotation | input.review.object.metadata.annotations[annotation]}
          required := {annotation | annotation := input.parameters.annotations[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide annotations: %v", [missing])
        }

        violation[{"msg": msg, "details": {"missing_annotations": missing}}] {
          # For Deployment
          input.review.kind.kind == "Deployment"
          provided := {annotation | input.review.object.spec.template.metadata.annotations[annotation]}
          required := {annotation | annotation := input.parameters.annotations[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide annotations: %v", [missing])
        }
